[package]
name = "kah"
version = "0.2.0"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
homepage = "https://github.com/sondr3/kah"
description = "A small helper for kattis assignments"
repository = "https://github.com/sondr3/kah"
documentation = "https://github.com/sondr3/kah"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
travis-ci = { repository = "sondr3/kah" }

[dependencies]
structopt = "0.3.2"
ureq = { version = "1.4.1", features = ["json"] }
zip = "0.5.3"
tempfile = "3.1.0"
rust-ini = "0.15.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
thiserror = "1.0.20"
anyhow = "1.0.32"