[package]
name = "kah"
version = "0.2.0"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
homepage = "https://github.com/sondr3/kah"
description = "A small helper for kattis assignments"
repository = "https://github.com/sondr3/kah"
documentation = "https://github.com/sondr3/kah"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
travis-ci = { repository = "sondr3/kah" }

[dependencies]
anyhow = "1.0.32"
dialoguer = "0.6.2"
reqwest = { version = "0.10", features = ["json"] }
rust-ini = "0.15.3"
select = "0.5.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
structopt = "0.3.2"
tempfile = "3.1.0"
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["full"] }
zip = "0.5.3"