[package]
name = "kah"
version = "0.2.0"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
homepage = "https://github.com/sondr3/kah"
description = "A small helper for kattis assignments"
repository = "https://github.com/sondr3/kah"
documentation = "https://github.com/sondr3/kah"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
travis-ci = { repository = "sondr3/kah" }

[dependencies]
anyhow = "1.0.38"
dialoguer = "0.7.1"
directories = "3.0.1"
rust-ini = "0.16.1"
select = "0.5.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
tempfile = "3.2.0"
thiserror = "1.0.23"
zip = "0.5.9"
ureq = "2.0.1"